--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -13,18 +13,18 @@
 	</header>
 
 	<section id="left">
-		<h2>Pain au chocolat</h2>
-		<p>A bite into the puff pastry, filled with savory chocolate, keeps the pain away. Once the pastry is taken away, we wail in agony. There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain. Yet inflicting pain upon oneself for that one bite? Worth it all.</p>
+		<div><h2 id="title_left">Pain au chocolat</h2></div>
+		<p>A bite into the puff pastry, filled with savory chocolate, keeps the pain away. Once the pastry is taken away, we wail in agony. There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain. Yet inflicting pain upon oneself for that one bite?</p>
 	</section>
 
 	<section id="center">
-		<h2>Café au lait</h2>
+		<div><h2 id="title_center">Café au lait</h2></div>
 		<p>Coffee, tea, or coca cola? "OJ!" the guest snaps. Only the best hand-selected cocoa beans, imported straight from the Tropic zone, are ground and brewed into this savory beverage. With its pungent taste, the insertion of milk creates a masterpiece. What about OJ, you say?</p>
 	</section>
 
 	<section id="right">
-		<h2>A la mode</h2>
-		<p>Dummy text served with a side of ice cream, so that our Lorem ipsums may be tasty as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consequat elit id dolor dignissim euismod. Nam nec volutpat diam, efficitur scelerisque eros. Nulla sagittis lobortis purus et dictum.</p>
+		<div><h2 id="title_right">A la mode</h2></div>
+		<p>Dummy text served with a side of ice cream, so that our Lorem ipsums may be tasty as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consequat elit id dolor dignissim euismod. Nam nec volutpat diam, efficitur scelerisque eros.</p>
 	</section>
 
 
